--- a/csr/Brewfile
+++ b/csr/Brewfile
@@ -17,7 +17,9 @@ brew 'makedepend'
 brew 'openssl'
 brew 'python3'
 brew 'boost-python'
+brew 'libidn'
 brew 'curl'
+brew 'cmake'
 brew 'expat'
 brew 'linux-headers'
 brew 'glibc'
@@ -26,5 +28,10 @@ brew 'mpfr'
 brew 'libmpc'
 brew 'isl'
 brew 'gcc'
+brew 'texinfo'
+brew 'gdb'
+brew 'pcre'
 brew 'git'
 brew 'patchelf', args: ['with-static']
+brew 'swig'
+brew 'homebrew/dupes/make'
