add libffi, libxml2 and libxslt for scrapy

--- a/csr/Brewfile
+++ b/csr/Brewfile
@@ -32,6 +32,9 @@ brew 'texinfo'
 brew 'gdb'
 brew 'pcre'
 brew 'git'
+brew 'libffi'
+brew 'libxml2'
+brew 'libxslt'
 brew 'patchelf', args: ['with-static']
 brew 'swig'
 brew 'homebrew/dupes/make'
