--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -3,12 +3,15 @@ cffi==1.7.0
 click==6.6
 cryptography==1.4
 cssselect==0.9.2
+decorator==4.0.10
 Flask==0.11.1
 idna==2.1
 itsdangerous==0.24
 Jinja2==2.8
 lxml==3.6.1
 MarkupSafe==0.23
+networkx==1.11
+numpy==1.11.1
 parsel==1.0.3
 pyasn1==0.1.9
 pyasn1-modules==0.0.8
@@ -17,12 +20,13 @@ PyDispatcher==2.0.5
 pyOpenSSL==16.0.0
 pythonpy==0.4.11
 queuelib==1.4.2
+requests==2.11.0
 Scrapy==1.1.1
 service-identity==16.0.0
 six==1.10.0
-Twisted==16.3.0
+Twisted==16.3.1
 w3lib==1.15.0
 Werkzeug==0.11.10
 you-get==0.4.523
-youtube-dl==2016.8.12
+youtube-dl==2016.8.13
 zope.interface==4.2.0
