add autojump, fpp and fzf

--- a/csr/Brewfile
+++ b/csr/Brewfile
@@ -1,6 +1,7 @@
 tap 'homebrew/core'
 tap 'homebrew/dupes'
 tap 'homebrew/bundle'
+brew 'autojump'
 brew 'zlib'
 brew 'binutils'
 brew 'icu4c'
@@ -21,6 +22,11 @@ brew 'libidn'
 brew 'curl'
 brew 'cmake'
 brew 'expat'
+brew 'python'
+brew 'fpp'
+brew 'pcre'
+brew 'git'
+brew 'fzf'
 brew 'linux-headers'
 brew 'glibc'
 brew 'gmp'
@@ -30,8 +36,6 @@ brew 'isl'
 brew 'gcc'
 brew 'texinfo'
 brew 'gdb'
-brew 'pcre'
-brew 'git'
 brew 'libffi'
 brew 'libxml2'
 brew 'libxslt'
