--- a/csr/Brewfile
+++ b/csr/Brewfile
@@ -1,16 +1,20 @@
 tap 'homebrew/core'
 tap 'homebrew/dupes'
 tap 'homebrew/bundle'
+tap 'homebrew/services'
+brew 'xz'
+brew 'homebrew/dupes/m4'
+brew 'autoconf'
 brew 'autojump'
+brew 'automake'
 brew 'zlib'
 brew 'binutils'
+brew 'gpatch'
 brew 'icu4c'
 brew 'bzip2'
 brew 'boost', args: ['with-icu4c']
-brew 'xz'
 brew 'pkg-config'
 brew 'homebrew/dupes/ncurses'
-brew 'gpatch'
 brew 'readline'
 brew 'sqlite'
 brew 'gdbm'
@@ -42,4 +46,5 @@ brew 'libxslt'
 brew 'patchelf', args: ['with-static']
 brew 'pv'
 brew 'swig'
+brew 'the_silver_searcher'
 brew 'homebrew/dupes/make'
