add ruby for csr-report

--- a/csr/Brewfile
+++ b/csr/Brewfile
@@ -2,6 +2,7 @@ tap 'homebrew/core'
 tap 'homebrew/dupes'
 tap 'homebrew/bundle'
 tap 'homebrew/services'
+tap 'caskroom/cask'
 brew 'xz'
 brew 'homebrew/dupes/m4'
 brew 'autoconf'
@@ -43,8 +44,10 @@ brew 'gdb'
 brew 'libffi'
 brew 'libxml2'
 brew 'libxslt'
+brew 'libyaml'
 brew 'patchelf', args: ['with-static']
 brew 'pv'
+brew 'ruby'
 brew 'swig'
 brew 'the_silver_searcher'
 brew 'homebrew/dupes/make'
