--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -1,32 +1,35 @@
-attrs==16.2.0
-cffi==1.8.3
-click==6.6
-cryptography==1.5.2
-cssselect==0.9.2
+attrs==16.3.0
+cffi==1.9.1
+click==6.7
+constantly==15.1.0
+cryptography==1.7.1
+cssselect==1.0.0
 decorator==4.0.10
-Flask==0.11.1
-idna==2.1
+Flask==0.12
+idna==2.2
+incremental==16.10.1
 itsdangerous==0.24
-Jinja2==2.8
-lxml==3.6.4
+Jinja2==2.9.3
+lxml==3.7.2
 MarkupSafe==0.23
 networkx==1.11
-numpy==1.11.2
-parsel==1.0.3
+numpy==1.11.3
+parsel==1.1.0
+pipdeptree==0.9.0
 pyasn1==0.1.9
 pyasn1-modules==0.0.8
-pycparser==2.14
+pycparser==2.17
 PyDispatcher==2.0.5
-pyOpenSSL==16.1.0
+pyOpenSSL==16.2.0
 pythonpy==0.4.11
 queuelib==1.4.2
-requests==2.11.1
-Scrapy==1.2.0
+requests==2.12.4
+Scrapy==1.3.0
 service-identity==16.0.0
 six==1.10.0
-Twisted==16.4.1
-w3lib==1.15.0
-Werkzeug==0.11.11
-you-get==0.4.555
-youtube-dl==2016.10.2
-zope.interface==4.3.2
+Twisted==16.6.0
+w3lib==1.16.0
+Werkzeug==0.11.15
+you-get==0.4.595
+youtube-dl==2017.1.8
+zope.interface==4.3.3
