--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -1,35 +1,43 @@
+appdirs==1.4.2
 attrs==16.3.0
+Automat==0.5.0
 cffi==1.9.1
 click==6.7
 constantly==15.1.0
-cryptography==1.7.1
-cssselect==1.0.0
-decorator==4.0.10
+cryptography==1.7.2
+cssselect==1.0.1
+decorator==4.0.11
 Flask==0.12
 idna==2.2
 incremental==16.10.1
 itsdangerous==0.24
-Jinja2==2.9.3
-lxml==3.7.2
+Jinja2==2.9.5
+lxml==3.7.3
 MarkupSafe==0.23
 networkx==1.11
-numpy==1.11.3
+numpy==1.12.0
+packaging==16.8
+pandas==0.19.2
 parsel==1.1.0
 pipdeptree==0.9.0
-pyasn1==0.1.9
+psutil==5.1.3
+pyasn1==0.2.3
 pyasn1-modules==0.0.8
 pycparser==2.17
 PyDispatcher==2.0.5
 pyOpenSSL==16.2.0
+pyparsing==2.1.10
+python-dateutil==2.6.0
 pythonpy==0.4.11
+pytz==2016.10
 queuelib==1.4.2
-requests==2.12.4
-Scrapy==1.3.0
+requests==2.13.0
+Scrapy==1.3.2
 service-identity==16.0.0
 six==1.10.0
-Twisted==16.6.0
-w3lib==1.16.0
+Twisted==17.1.0
+w3lib==1.17.0
 Werkzeug==0.11.15
-you-get==0.4.595
-youtube-dl==2017.1.8
+you-get==0.4.652
+youtube-dl==2017.2.24.1
 zope.interface==4.3.3
