--- a/ssh/config
+++ b/ssh/config
@@ -13,9 +13,11 @@ Host cs*
     User csppyi
     HostName %h.comp.hkbu.edu.hk
     ForwardAgent yes
+    ProxyCommand ssh faith nc %h %p
 
 # bchoi-server: VM with CentOS 6.8, 32GB RAM, 180GB disk
 Host demo
     User csppyi
     HostName 158.182.9.143
     ForwardAgent yes
+    ProxyCommand ssh faith nc %h %p
