--- a/ssh/config
+++ b/ssh/config
@@ -18,6 +18,7 @@ Host cs* gpu*
 # bchoi-server: VM with CentOS 6.8, 32GB RAM, 180GB disk
 Host demo
     User csppyi
+    HostName cs9143
     HostName 158.182.9.143
     ForwardAgent yes
     ProxyCommand ssh faith nc %h %p
